log
Thu 07 Sep 2023 07:18:10 PM UTC: 
 tests:  0|6
total_score: 0/70
d043dfe
Thu 07 Sep 2023 07:28:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:21: error: ‘HashMapMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |                     ^~~~~~~~~~
      |                     HashMap
hashmap.c:56:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:32: error: expected expression before ‘)’ token
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |                                ^
hashmap.c:56:14: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |              ^~~
hashmap.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2c4934c
Thu 07 Sep 2023 07:30:34 PM UTC: 
 hashmap.c | 45 +++++++++++++++------------------------------
 1 file changed, 15 insertions(+), 30 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a6eabe
Thu 07 Sep 2023 07:41:02 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1b68988
Thu 07 Sep 2023 07:43:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:26: error: expected expression before ‘)’ token
   60 |   map->buckets = (modf **)malloc(sizeof(Node));
      |                          ^
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
126a9a0
Thu 07 Sep 2023 07:44:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b17d62f
Thu 07 Sep 2023 07:48:59 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4e17231
Thu 07 Sep 2023 07:51:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
932773a
Thu 07 Sep 2023 07:52:18 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
3cb0037
Thu 07 Sep 2023 08:00:36 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:7: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |   int i = hash(key, map->capacity);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
4e3f855
Thu 07 Sep 2023 08:01:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:8: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |   long i = hash(key, map->capacity);
      |        ^
cc1: all warnings being treated as errors
Compilation failed
76afc83
Thu 07 Sep 2023 08:01:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:8: error: unused variable ‘index’ [-Werror=unused-variable]
   47 |   long index = hash(key, map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
3206b09
Fri 08 Sep 2023 01:48:16 AM UTC: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
9afe585
Fri 08 Sep 2023 01:50:17 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:85:43: error: control reaches end of non-void function [-Werror=return-type]
   85 | Pair *searchMap(HashMap *map, char *key) {}
      |                                           ^
cc1: all warnings being treated as errors
Compilation failed
4f4d42b
Fri 08 Sep 2023 01:50:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
aeefaf7
Fri 08 Sep 2023 01:52:16 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:89:9: error: expected expression before ‘)’ token
   89 |     if ()
      |         ^
hashmap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9b812ae
Fri 08 Sep 2023 01:56:08 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:7: error: unknown type name ‘retrun’
   92 |       retrun map;
      |       ^~~~~~
hashmap.c:92:14: error: unused variable ‘map’ [-Werror=unused-variable]
   92 |       retrun map;
      |              ^~~
hashmap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c7443df
Fri 08 Sep 2023 01:56:46 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c728186
Fri 08 Sep 2023 02:01:42 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 30/70
af5fddf
Fri 08 Sep 2023 02:08:29 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e8062cc
Fri 08 Sep 2023 02:09:12 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:16: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   98 |   map->current = NULL;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
88e539f
Fri 08 Sep 2023 02:09:43 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
c39e904
Fri 08 Sep 2023 02:19:09 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:86:13: error: invalid operands to binary == (have ‘Pair’ and ‘void *’)
   86 |   if (*pair == NULL) {
      |       ~~~~~ ^~
      |       |
      |       Pair
Compilation failed
91a1609
Fri 08 Sep 2023 02:19:24 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:86:7: error: expected expression before ‘Pair’
   86 |   if (Pair == NULL) {
      |       ^~~~
Compilation failed
257e337
Fri 08 Sep 2023 02:27:58 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
7224a32
Fri 08 Sep 2023 02:28:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
874eefd
Fri 08 Sep 2023 11:38:47 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
9b5f5a2
